# revmup

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: counter.json  erc20.json
examples/basics/: Cargo.toml
examples/basics/src/: counter.rs  erc20.rs  main.rs
examples/basics/src/contract/: erc_20.rs
revmup-abigen/: Cargo.toml  README.md
revmup-abigen/src/: contract.rs  lib.rs  macro.rs  multi.rs  util.rs  verbatim.rs
revmup-abigen/src/contract/: errors.rs  events.rs  methods.rs  structs.rs  types.rs
revmup-client/: Cargo.toml  README.md
revmup-client/src/: client.rs  lib.rs
revmup-contract/: Cargo.toml  README.md
revmup-contract/src/: call.rs  contract.rs  lib.rs
revmup-gen/: Cargo.toml
revmup-gen/src/: lib.rs
revmup-gen/src/contract/: events.rs  methods.rs
