[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/davebryson/revmup"
homepage = "https://github.com/davebryson/revmup"
categories = ["cryptography::cryptocurrencies"]
keywords = ["revm", "ethereum", "web3"]

[workspace.dependencies]
ethers-core = "2.0.8"
ethers-contract = "2.0.8"
eyre = "0.6.8"
revm = "3.3.0"
hex = "0.4"

[workspace]
members = ["revmup-contract", "revmup-client", "revmup-abigen", "examples/*"]
