[package]
name = "revmup-abigen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate"
path = "src/bin/genit.rs"

[dependencies]
eyre = "0.6.8"

ethers = "2.0.8"

hex = "0.4"
#hex-literal = "0.4"

revm = "3.3.0"


# serde
serde = "1.0"
serde_json = "1.0"

dunce = "1.0"
Inflector = "0.11"
regex = "1.8"
walkdir = "2.3"

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
prettyplease = { version = "0.2", features = ["verbatim"] }

revmup-contract = { path="../revmup-contract"}
revmup-client = {path="../revmup-client"}