[package]
name = "revmup-abigen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate"
path = "src/bin/gencontracts.rs"

[dependencies]
eyre.workspace = true
ethers-core.workspace = true
ethers-contract.workspace = true
hex.workspace = true
revm.workspace = true

serde = "1.0"
serde_json = "1.0"
clap = { version = "4.3.19", features = ["derive"] }

dunce = "1.0"
Inflector = "0.11"
regex = "1.8"
walkdir = "2.3"
toml = "0.7"
tempfile = "3.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
prettyplease = { version = "0.2", features = ["verbatim"] }

revmup-contract = { path = "../revmup-contract" }
revmup-client = { path = "../revmup-client" }
