[package]
name = "revmup-abigen"
authors = ["Dave Bryson <davebryson@users.noreply.github.com>"]
readme = "README.md"
description = "API to auto-generate ethereum contracts for use with REVM"

version.workspace = true
edition.workspace = true
license.workspace = true


[[bin]]
name = "revmup"
path = "src/bin/generate.rs"

[dependencies]
eyre.workspace = true
ethers-core.workspace = true
ethers-contract.workspace = true
hex.workspace = true
revm.workspace = true

serde = "1.0"
serde_json = "1.0"
clap = { version = "4.3.19", features = ["derive"] }

dunce = "1.0"
Inflector = "0.11"
regex = "1.8"
walkdir = "2.3"
toml = "0.7"
tempfile = "3.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
prettyplease = { version = "0.2", features = ["verbatim"] }

revmup-contract = { path = "../revmup-contract" }
revmup-client = { path = "../revmup-client" }
