[package]
name = "revmup-client"
authors = ["Dave Bryson <davebryson@users.noreply.github.com>"]
readme = "README.md"
description = "Client for interacting with REVM - a Rust based ethereum virtual machine"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ethers-core.workspace = true
eyre.workspace = true
revm.workspace = true

rand = "0.8.5"
