[package]
name = "revmup-contract"
authors = ["Dave Bryson <davebryson@users.noreply.github.com>"]
readme = "README.md"
description = "revm API for interacting with Ethereum smart contracts"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ethers-core.workspace = true
ethers-contract.workspace = true
eyre.workspace = true
revm.workspace = true
hex.workspace = true

revmup-client = { path = "../revmup-client" }
